[package]
name = "put"
version = "0.1.0"
authors = ["luoshuqi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glade_macro = { path = "glade_macro"}
gtk = { "version" = "0.8.1", "features" = ["v3_22"]}
gio = { "version" = "0.8.1", "features" = ["v2_44"]}
sourceview = "0.8.0"
glib = "0.9.3"
gdk = "0.12.1"
pango = "0.8.0"
curl = "0.4.29"
serde = { version = "1.0.111", features = ["derive"] }
serde_json="1.0.53"
serde_yaml="0.8.12"
sqlite = "0.25.1"
dirs = "2.0.2"
percent-encoding = "2.1.0"